reConfig with Local Authentication

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"lucia": "^3.0.1",
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -41,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@libsql/client": "^0.7.0",
+		"@lucia-auth/adapter-sqlite": "^3.0.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.31.2",
 		"milligram": "^1.4.1",
