--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"push:db": "drizzle-kit push --config=src/lib/server/db/drizzle.config.ts",
 		"migrate:db": "tsx src/lib/server/db/migrate.ts",
 		"studio": "drizzle-kit studio",
-		"db:seed": "node --loader esbuild-register/loader -r esbuild-register .src/lib/server/db/seed.ts"
+		"db:seed": "tsx src/lib/server/db/seed.ts"
 	},
 	"devDependencies": {
 		"@ngneat/falso": "^7.2.0",
